<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!--Video para fondo de interfaz-->
    <VideoView
        android:id="@+id/back_login"
        android:layout_width="1000dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!--Para degradar el fondo de interfaz-->
    <View
        android:id="@+id/viewSplash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/scrim_login_signup"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Imagen para la mitad izquierda del logo-->

    <!--Imagen para la mitad derecha del logo-->

    <!--Campo de texto para nombre de usuario-->

    <ImageView
        android:id="@+id/imageViewEmo"
        android:layout_width="166dp"
        android:layout_height="218dp"
        android:src="@drawable/letra_emotions_modificado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199" />

    <ImageView
        android:id="@+id/imageViewDog"
        android:layout_width="171dp"
        android:layout_height="221dp"
        android:src="@drawable/logo_perro_rayas_mitad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideLine2"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLogIn"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:alpha="0.8"
        android:hint="username"
        app:layout_constraintEnd_toEndOf="@id/guideLine2"
        app:layout_constraintStart_toStartOf="@id/guideLine"
        app:layout_constraintTop_toBottomOf="@+id/guideLineH">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Campo de texto para contraseña-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:alpha="0.8"
        android:hint="password"
        app:layout_constraintEnd_toEndOf="@id/guideLine2"
        app:layout_constraintStart_toStartOf="@id/guideLine"
        app:layout_constraintTop_toBottomOf="@+id/usernameLogIn">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Boton para "Log In"-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottomLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:alpha="0.8"
        android:text="Login"
        style="@style/ButtonStraight"
        app:layout_constraintEnd_toEndOf="@id/guideLine2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideLine"
        app:layout_constraintTop_toBottomOf="@+id/passwordTIL">

    </com.google.android.material.button.MaterialButton>

    <!--Lineas de guias para "layout"-->
    <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideLine"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.15"
    ></androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"
        ></androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"
        ></androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineVideoL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="-0.70"></androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineVideoR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.50"></androidx.constraintlayout.widget.Guideline>

    <!--Textos para transicion a Registro-->
    <TextView
        android:id="@+id/textRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="Regístrate"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideLine2"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="@id/guideLine"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.779" />
    s
    <TextView
        android:id="@+id/textSinFuncion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="¿No tienes una cuenta?"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textRegistro"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="@id/guideLine"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.779" />

</androidx.constraintlayout.widget.ConstraintLayout>