...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameSignUp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:alpha="0.8"
        android:hint="username"
...
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Boton para "Sign Up"-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottomSignUp"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:alpha="0.8"
        android:text="SIGN UP"
        style="@style/ButtonStraight"
...
